hp-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hp-dp
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hp-svc
#      category: homepage
  template:
    metadata:
      name: hp-pod
      labels:
        app: hp-svc
        category: homepage
    spec:
      containers:
      - name: container
        image: ghcr.io/wsjang619/home
        ports:
        - containerPort: 8081
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k8s-worker1
                - k8s-worker2
