p3-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p3-dp
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: p3-svc
#      category: schedule
  template:
    metadata:
      name: p3-pod
      labels:
        app: p3-svc
        category: schedule
    spec:
      containers:
      - name: container
        image: ghcr.io/wsjang619/schedule
        ports:
        - containerPort: 8080
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k8s-worker3
                - k8s-worker1
