pod1-default-w1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1-default
spec:
  nodeName: k8s-worker1
  containers:
  - name: nginx
    image: nginx:1.14.0
    ports:
    - containerPort: 8081
