pod1-page2-w2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1-page2
spec:
  containers:
  - name: nginx
    image: nginx:1.14.0
    ports:
    - containerPort: 8082
    nodeName: k8s-worker2
