pod2-default-w2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2-default
  labels:
    app: hp-svc
spec:
  nodeName: k8s-worker2
  containers:
  - name: nginx
    image: nginx:1.14.0
    ports:
    - containerPort: 8081
