pod2-page2-w3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2-page2
spec:
  nodeName: k8s-worker3
  containers:
  - name: nginx
    image: nginx:1.14.0
    ports:
    - containerPort: 8082
