pod2-page3-w1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2-page3
  labels:
    app: p3-svc
spec:
  nodeName: k8s-worker1
  containers:
  - name: nginx
    image: nginx:1.14.0
    ports:
    - containerPort: 8083
