hp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hp-svc
spec:
  #selector:
  #  app: svc
  ports:
  - port: 80
    targetPort: 8081
