p2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2-svc
spec:
  #selector:
  #  app: svc
  ports:
  - port: 80
    targetPort: 8082
