p3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: p3-svc
spec:
  selector:
    app: p3-svc
  ports:
  - port: 80
    targetPort: 8083
